# iris-py

./: CLAUDE.md  LICENSE  NOTICE  README.md  README_JP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: USAGE.md  USAGE_JP.md
src/iris_pse_detection/: __init__.py
