[project]
name = "iris-pse-detection"
version = "1.1.0"
description = "Python port of EA's IRIS - Photosensitive epilepsy risk detection for video content"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "IRIS-PSE-Detection contributors"},
]
keywords = ["video", "analysis", "epilepsy", "photosensitivity", "flash", "pattern", "accessibility", "wcag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.22",
    "opencv-python>=4.6",
    "scipy>=1.8",
]

[project.urls]
Homepage = "https://github.com/tokoroten/iris-pse-detection"
Repository = "https://github.com/tokoroten/iris-pse-detection"
"Original C++ Project" = "https://github.com/electronicarts/IRIS"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
iris = "iris_pse_detection.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iris_pse_detection"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
